# lib/api-spec/openapi.yaml
@@ -1302,6 +1302,12 @@ components:
         email:
           type: string
           nullable: true
+        address:
+          type: string
+          nullable: true
+        profilePhoto:
+          type: string
+          nullable: true
         diamonds:
           type: integer
         score:
@@ -1343,6 +1349,12 @@ components:
           type: string
         phone:
           type: string
+        address:
+          type: string
+          nullable: true
+        profilePhoto:
+          type: string
+          nullable: true
         diamonds:
           type: integer
         score:
@@ -1459,6 +1471,10 @@ components:
           type: string
         email:
           type: string
+        address:
+          type: string
+        profilePhoto:
+          type: string
         diamonds:
           type: integer
         score:
@@ -1473,6 +1489,10 @@ components:
       type: object
       properties:
         pseudo:
+          type: string
+        address:
+          type: string
+        profilePhoto:
           type: string
         diamonds:
           type: integer
